Fixed off-centered device placeholder (issue #343).

--- a/client/src/widgets/device-placeholder.scss
+++ b/client/src/widgets/device-placeholder.scss
@@ -1,8 +1,8 @@
 .device-placeholder {
     font-size: 8em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
     color: #111111;
+    width: 100%;
+    text-align: center;
 
     .fa-ban {
         color: #ee3333;
